Replacing 'Freerunner' with 'FreeRunner'

--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -2,7 +2,7 @@
 
 == FreeRunner (GTA02): known hardware-related issues ==
 
-There is a collection of known FreeRunner hardware issues at the wiki page [[Freerunner_Hardware_Issues]]; reading that page could help you quickly solve those issues.
+There is a collection of known FreeRunner hardware issues at the wiki page [[FreeRunner_Hardware_Issues]]; reading that page could help you quickly solve those issues.
 
 ==Booting==
 === Why won't the FreeRunner boot even with the charger connected? ===
@@ -69,7 +69,7 @@ To get the u-boot menu:
 Also see the wiki pages/sections:
 * [[Booting the Neo FreeRunner]]
 * [[Bootloader#Device Firmware Upgrade]]
-* [[Flashing the Neo Freerunner]]
+* [[Flashing the Neo FreeRunner]]
 * [[Dfu-util]]
 
 <!-- The (commented) information below does not seem to answer the question, which states a problem with '''dfu-util''' and not with SSH over USB Ethernet networking. Editors, please consider deleting commented information below. --[[User:Eddsouza|eddsouza]] 06:47, 31 August 2008 (UTC) -->
@@ -126,7 +126,7 @@ Run:
  echo "host" > /sys/devices/platform/s3c2410-ohci/usb_mode
  echo "1" > /sys/devices/platform/neo1973-pm-host.0/hostmode
 
-These commands will put the Freerunner into powered USB host mode. After this, just plug in the keyboard and it'll work. Personally, I've made a .desktop file to switch into and out of host mode. 
+These commands will put the FreeRunner into powered USB host mode. After this, just plug in the keyboard and it'll work. Personally, I've made a .desktop file to switch into and out of host mode. 
 
 To switch back to unpowered device mode just run:
 
