Replacing 'Freerunner' with 'FreeRunner'

--- a/Neo_FreeRunner_GPS.mw
+++ b/Neo_FreeRunner_GPS.mw
@@ -43,7 +43,7 @@ One with a fix:
 
 --[[User:Speedevil|Speedevil]] 11:52, 7 April 2008 (CEST)
 
-If you are having GPS problems with your Freerunner, please document them on the page [[GPS Problems]]. [[FreeRunner GPS antenna repair SOP]] documents a possible solution.
+If you are having GPS problems with your FreeRunner, please document them on the page [[GPS Problems]]. [[FreeRunner GPS antenna repair SOP]] documents a possible solution.
 
 In Openmoko projects, there is a GPS test program called '''agpsui''' that provides graphical and text dump of GPS information. See [[Howto Test Your GPS with agpsui]]. The project is called [http://svn.projects.openmoko.org/svnroot/openmoko-agpsui Openmoko AGPS UI project].
 
@@ -61,7 +61,7 @@ Using Bluetooth would allow using just about any program that understands the NM
 
 This procedure depends upon being able to set up a network connection between your Neo and your laptop. The connection can be over either WiFi or USB cable.
 
-First be sure you have gpsd installed. Some Neo Freerunner images don't have gpsd, they use a different GPS stack called gypsy. 
+First be sure you have gpsd installed. Some Neo FreeRunner images don't have gpsd, they use a different GPS stack called gypsy. 
 
 # On host type: '''nc -vvn -l -p 5000 > /tmp/nmeaNP''' (Host starts listening on port 5000 for GPS-signals and sends them to /tmp/nmeaNP)
 # On the Neo type:   '''nc 192.168.0.200 5000 < /dev/ttySAC1''' (Signals from device will be send to port 5000 on host.) If your host is connected to the neo via wifi, change the IP address in the command to the one of the host. 
@@ -130,7 +130,7 @@ Here is a simple perl skript doing the same:
 <pre>
 #!/usr/bin/perl -wT
 #
-# ublox AssistNow Online almanach downloader for Neo Freerunner
+# ublox AssistNow Online almanach downloader for Neo FreeRunner
 #
 # v0.1
 #
@@ -180,7 +180,7 @@ Same in python:
 <pre>
 #!/usr/bin/python
 #
-# ublox AssistNow Online almanach downloader for Neo Freerunner
+# ublox AssistNow Online almanach downloader for Neo FreeRunner
 #
 # v0.1
 #
