Replacing 'Freerunner' with 'FreeRunner'

--- a/Neo_FreeRunner_GPS_Software_Fix_Test_Report.mw
+++ b/Neo_FreeRunner_GPS_Software_Fix_Test_Report.mw
@@ -1,6 +1,6 @@
-See [[GPS_Problems]] for details on Freerunner GPS problems.
+See [[GPS_Problems]] for details on FreeRunner GPS problems.
 
-=== Problem: it takes a long time (10min+) before the Freerunner gets first GPS data ===
+=== Problem: it takes a long time (10min+) before the FreeRunner gets first GPS data ===
 
 It was found that the Openmoko FreeRunner GPS has a long Time To First Fix (TTFF) with the SD card in the phone. [http://lists.openmoko.org/pipermail/community/2008-July/021774.html This thread] indicates that there is interference from the SD card slot, as without the SD card inserted it the TTFF are much shorter.
 
