Replacing 'Freerunner' with 'FreeRunner'

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -1,8 +1,8 @@
 {{Neo FreeRunner Menu}}
 
-This is a community-written page that discusses '''hardware issues''' with the Freerunner/[[GTA02]] device. Information here is unofficial (and possibly incorrect) unless otherwise stated. Corrections and clarifications from Openmoko employees would be greatly appreciated.
+This is a community-written page that discusses '''hardware issues''' with the FreeRunner/[[GTA02]] device. Information here is unofficial (and possibly incorrect) unless otherwise stated. Corrections and clarifications from Openmoko employees would be greatly appreciated.
 
-Also please '''DON'T PANIC''' when reading this page. Please give Openmoko employees time to investigate these issues and to develop a solution.  Some of the items may turn out to be non-issues, or may have software workarounds. The Freerunner's software is still under heavily development and can help fix most of this problems.
+Also please '''DON'T PANIC''' when reading this page. Please give Openmoko employees time to investigate these issues and to develop a solution.  Some of the items may turn out to be non-issues, or may have software workarounds. The FreeRunner's software is still under heavily development and can help fix most of this problems.
 
 === Active Issues ===
 
@@ -56,7 +56,7 @@ It is possible that there is more than one issue involved here. The observed pro
 
 * Electrical incompatibility (some tests show problems with 1.8V SIMs while 2.9V ones work OK)
 
-* Firmware bugs in the TI Calypso GSM chipset. Note that one issue in this category was found and fixed on the GTA01 devices (#666 in Trac), and that specific problem should not affect the Freerunner.
+* Firmware bugs in the TI Calypso GSM chipset. Note that one issue in this category was found and fixed on the GTA01 devices (#666 in Trac), and that specific problem should not affect the FreeRunner.
 
 * Defective SIMs, i.e. ones that do not comply with the applicable standards and are acknowledged as being defective by the carrier (even if they happen to work in some phones). 
 
@@ -87,7 +87,7 @@ This section lists items that are acknowledged as being less than ideal, but are
 These are issues that have been discussed in the past, but have been fixed (or turned out not to be a problem) for the mass-produced devices.
 
 * Excessive LED current - Some early units lacked a current-limiting resistor for the LEDs. This has been fixed for the production units.
-* Battery life - At this time it appears that the Freerunner battery life will be acceptable once suspend/resume support has been implemented in software.
+* Battery life - At this time it appears that the FreeRunner battery life will be acceptable once suspend/resume support has been implemented in software.
 * slow GPS TTFF - see [[GPS Problems]]
 ==== Empty NOR Flash ====
 
@@ -115,8 +115,8 @@ Workarounds: Edit configuration files (e.g. openocd.conf) to use the IDs that th
 
 The information below has been collected from various sources, feel free to add questions and comments here.
 
-===GPS Performance of the Freerunner===
-The poor GPS performance on the Freerunner has been traced to an
+===GPS Performance of the FreeRunner===
+The poor GPS performance on the FreeRunner has been traced to an
 interaction between the microSD card and the GPS unit. A software
 and a hardware fixes are available, see [[GPS Problems]].
 
@@ -132,7 +132,7 @@ There is an open source kdrive driver being written for the GTA02 which will use
 
 Documentation for the SMedia 3362 has been promised ([http://lists.openmoko.org/pipermail/community/2007-September/010175.html see this post]). However, this refers to documentation Openmoko developers will be writing themselves, not the technical documentation SMedia have provided Openmoko with. The Openmoko developers had to sign an NDA with SMedia to obtain this documentation and are therefore unable to pass this information on to community developers. (See [http://lists.openmoko.org/pipermail/community/2007-November/011349.html this post] for details)
 
-=== Power Management on the Neo1973/Freerunner===
-The current battery life of the Neo1973 and Freerunner is not satisfactory. A lot of changes seem to be necessary to the kernel, drivers and related user-space applications. Hopefully the situation will improve over time.
+=== Power Management on the Neo1973/FreeRunner===
+The current battery life of the Neo1973 and FreeRunner is not satisfactory. A lot of changes seem to be necessary to the kernel, drivers and related user-space applications. Hopefully the situation will improve over time.
 
 [[Category:Neo FreeRunner Hardware]]
