Replacing 'Freerunner' with 'FreeRunner'

--- a/Neo_alsamixer.mw
+++ b/Neo_alsamixer.mw
@@ -230,6 +230,6 @@ To run alsamixer through ssh, run
 
 
 ===Troubleshooting===
-See [[Freerunner Hardware Issues#Better alsamixer settings]]
+See [[FreeRunner Hardware Issues#Better alsamixer settings]]
 
 [[Category:Audio]]
