--- a/OpenmokoFramework%2FStatus_Update_3.mw
+++ b/OpenmokoFramework%2FStatus_Update_3.mw
@@ -67,7 +67,7 @@ A lightweight image that turns an Openmoko phone into a featurephone and that ca
 ====Download / Installation====
 
 # Grab a uImage and a .jffs2 for your device from http://downloads.openmoko.org/framework/milestone2/.
-# Flash it to your Neo1973 (om-gta01) or NeoFreerunner (om-gta02) with dfu-util.
+# Flash it to your Neo1973 (om-gta01) or NeoFreeRunner (om-gta02) with dfu-util.
 # Boot and wait until the Zhone main window appears.
 # Have fun.
 
