Replacing 'Freerunner' with 'FreeRunner'

--- a/Openmoko_Local_Groups:_Antwerp.mw
+++ b/Openmoko_Local_Groups:_Antwerp.mw
@@ -15,7 +15,7 @@
 |-
 |[[User:BioGeek|BioGeek]]
 |bioinformatics, Linux user since 1998, Python programming
-|Awaiting NeoFreerunner, Mobistar
+|Awaiting NeoFreeRunner, Mobistar
 |2018 Antwerpen (Berchem)
 |willing to meet other Openmoko users, exchange ideas and spread the love for Free and Open Source Software in general
 |}
