Replacing 'Freerunner' with 'FreeRunner'

--- a/Openmoko_Local_Groups:_Berlin.mw
+++ b/Openmoko_Local_Groups:_Berlin.mw
@@ -129,7 +129,7 @@ We have set up a mailinglist a freelists.org. To subscribe either send a mail wi
 |coding, Linux, even Windows
 |I want to be free
 |Schmöckwitz (Köpenick)
-|[http://picasaweb.google.com/Joachim.Ott/NeoFreerunner see pics]
+|[http://picasaweb.google.com/Joachim.Ott/NeoFreeRunner see pics]
 |GTA02v5 [[Image:Moko.jpg|center]]
 |
 |-
@@ -200,7 +200,7 @@ Meeting language is German ;-)
 |-
 |every wednesday / 20:00
 |[http://wiki.c-base.org/coredump/WaveLoeten c-base (zusammen mit dem Freifunkertreffen)]
-|Freerunner Release / Hands On
+|FreeRunner Release / Hands On
 |See [[Talk:Openmoko_Local_Groups:_Berlin|discussion]]
 |-
 |23.08.2007 / 18:00
