Replacing 'Freerunner' with 'FreeRunner'

--- a/Openmoko_Local_Groups:_Central_Texas.mw
+++ b/Openmoko_Local_Groups:_Central_Texas.mw
@@ -25,7 +25,7 @@ This group is for Austin/Round Rock and surrounding areas. Hopefully we'll be ab
 |-
 |[[User:Dalnefre|dalnefre]]
 |C, Java, embedded kernel design
-|waiting for Freerunner availability
+|waiting for FreeRunner availability
 |Austin
 |Interested in collaborative development
 |}
