Replacing 'Freerunner' with 'FreeRunner'

--- a/Openmoko_Local_Groups:_Dortmund.mw
+++ b/Openmoko_Local_Groups:_Dortmund.mw
@@ -10,7 +10,7 @@
 |-
 |[[User:Ugh|ugh]]
 |Software Developer
-|Got my Freerunner. Checking it out, getting started.
+|Got my FreeRunner. Checking it out, getting started.
 |Dortmund
 |/*no comment*/
 |[[Image: Moko.jpg|center]]
@@ -18,7 +18,7 @@
 |-
 |[[User:tobyS|TobyS]]
 |Software Developer
-|Owning a Freerunner. Several more or less crazy development ideas.
+|Owning a FreeRunner. Several more or less crazy development ideas.
 |Dortmund
 |Member of the PHP Usergroup (see below)
 |[[Image: Moko.jpg|center]]
@@ -27,6 +27,6 @@
 
 === Intermediate meeting point ===
 
-Several members of the local [http://phpugdo.de PHP Usergroup] own a Freerunner and are intetressted in developing applications for it and sharing experiences about usage and development. If you want to meet other Openmoko enthusiasts, don't hesitate to drop by the [http://phpugdo.de/dabei_sein.html regular meeting], which takes place every Thursday from 18:30 in the [http://www.hicc-up.de/ HiccUp] bar/restaurant. Don't forget to bring your Freerunner and/or notebook (wifi and power available). More detailed information on the [http://phpugdo.de PHP Usergroup Dortmund] website.
+Several members of the local [http://phpugdo.de PHP Usergroup] own a FreeRunner and are intetressted in developing applications for it and sharing experiences about usage and development. If you want to meet other Openmoko enthusiasts, don't hesitate to drop by the [http://phpugdo.de/dabei_sein.html regular meeting], which takes place every Thursday from 18:30 in the [http://www.hicc-up.de/ HiccUp] bar/restaurant. Don't forget to bring your FreeRunner and/or notebook (wifi and power available). More detailed information on the [http://phpugdo.de PHP Usergroup Dortmund] website.
 
 [[Category:Openmoko Local Groups]]
