Replacing 'Freerunner' with 'FreeRunner'

--- a/Openmoko_Local_Groups:_East_Texas.mw
+++ b/Openmoko_Local_Groups:_East_Texas.mw
@@ -10,7 +10,7 @@ This is the Local User Group page for Houston and the surrounding areas. Please 
 |-
 |[[User:Dogalmity|dogalmity]]
 |C, Linux kernel, C++, Java, SQL 
-|Gonna get me that there Freerunner contraption
+|Gonna get me that there FreeRunner contraption
 |Houston
 |
 |}
