Replacing 'Freerunner' with 'FreeRunner'

--- a/Openmoko_Local_Groups:_Erlangen-Nuernberg.mw
+++ b/Openmoko_Local_Groups:_Erlangen-Nuernberg.mw
@@ -12,7 +12,7 @@
 |C/C++, GTK+, dbus
 |Coding, Testing
 |Erlangen
-|just received my mass-production Freerunner on 10th of July :D
+|just received my mass-production FreeRunner on 10th of July :D
 |[[Image: Moko.jpg|center]]
 |
 |}
