Replacing 'Freerunner' with 'FreeRunner'

--- a/Openmoko_Local_Groups:_Finland.mw
+++ b/Openmoko_Local_Groups:_Finland.mw
@@ -10,6 +10,6 @@ IRC channel: '''''#openmoko-fi''''' @ irc.freenode.net <sup>([http://java.freeno
 * [[Openmoko Local Groups: Your city/area|Your city/area]]
 
 ==== See also ====
-* [[GroupSales#Finland|Group Purchases of Neo Freerunner devices in Finland]]<br><sup>group purchases mostly done, but still it would be possible to buy 10-packs from pulster.de for 299€/phone</sup>
+* [[GroupSales#Finland|Group Purchases of Neo FreeRunner devices in Finland]]<br><sup>group purchases mostly done, but still it would be possible to buy 10-packs from pulster.de for 299€/phone</sup>
 
 [[Category:Openmoko Local Groups]]
