Replacing 'Freerunner' with 'FreeRunner'

--- a/Openmoko_Local_Groups:_London.mw
+++ b/Openmoko_Local_Groups:_London.mw
@@ -54,61 +54,61 @@ Beer and Neo anyone?
 |General experience
 |User
 |Oxford
-|Wanted Freerunner perhaps get into a 10pack group]
+|Wanted FreeRunner perhaps get into a 10pack group]
 |-
 |[[User:chrestomanci|David Pottage]]
 |Perl, Java (J2se), C
 |User & developer
 |Reading
-|Freerunner
+|FreeRunner
 |-
 |[[User:vermoos|Michael Nandris]]
 |Python/Plone ethusiast, interest in DPA (1998)
 |User, developer
 |London, Camden
-|Wanted Freerunner perhaps get into a 10pack group]
+|Wanted FreeRunner perhaps get into a 10pack group]
 |-
 |[[User:Weiss|Weiss]]
 |C, GTK+, ARM Assembly, Perl, TCL
 |User, developer
 |Cambridge
-|Wanted Freerunner [perhaps get into a 10pack group]
+|Wanted FreeRunner [perhaps get into a 10pack group]
 |-
 |[[User:TimW|TimW]]
 |C++
 |User, developer
 |Pinner
-|Freerunner
+|FreeRunner
 |-
 |[[User:Menno|Menno Smits]]
 |Python, C, GTK+
 |User, apps development 
 |London
-|Freerunner
+|FreeRunner
 |-
 |[[User:David_Hicks|Dave]]
 |C, SSL/TLS, POSIX threading
 |User, apps development 
 |London
-|Freerunner
+|FreeRunner
 |-
 |Tina
 |User, Sys Admin
 |User (can compile, maybe port)
 |Oxford
-|Freerunner
+|FreeRunner
 |-
 |[[User:gnublade|Andy Kilner]]
 |Python, C, GTK+
 |User, Developer 
 |London
-|Freerunner
+|FreeRunner
 |-
 |[[User:Vortex|Vortex]]
 |C, toolchains, distributions
 | mesh networking, service discovery, wifi, bluetooth, scanning, gps
 |London
-|Freerunner
+|FreeRunner
 |-
 |}
 Key:
