Replacing 'Freerunner' with 'FreeRunner'

--- a/Openmoko_Local_Groups:_Melbourne.mw
+++ b/Openmoko_Local_Groups:_Melbourne.mw
@@ -33,7 +33,7 @@ Welcome to the Melbourne Openmoko usergroup.
 |-
 |[[User:rwh86|Robert Hutton]]
 | Linux,C/PHP/Perl,SQL
-| Freerunner user, aspiring developer
+| FreeRunner user, aspiring developer
 | North Melbourne
 |
 |}
