Replacing 'Freerunner' with 'FreeRunner'

--- a/Openmoko_Local_Groups:_Montreal.mw
+++ b/Openmoko_Local_Groups:_Montreal.mw
@@ -117,7 +117,7 @@ The following is a list of people interested in Openmoko from in and around Mont
 |-
 |[[User:Wjbaird|Warren Baird]]
 |Product Manager, Software Developer, Photographer
-|Owner, OM Freerunner
+|Owner, OM FreeRunner
 |Montreal
 |[[Image: Moko.jpg|center]]
 |
