Replacing 'Freerunner' with 'FreeRunner'

--- a/Openmoko_Local_Groups:_Tenerife.mw
+++ b/Openmoko_Local_Groups:_Tenerife.mw
@@ -1,6 +1,6 @@
 == ¡Bienvenido a la página de Openmoko Tenerife! ==
 
-De momento somos 5 a la espera del Freerunner vía [[IberiaGroupSale|IberiaGroupSale]]. Habemos 2 ingenieros informáticos, 2 electrónicos y 1 usuario avanzado, por tanto, creo que formamos un equipito interesante. Iremos apuntando por aquí la actividad que vayamos teniendo.
+De momento somos 5 a la espera del FreeRunner vía [[IberiaGroupSale|IberiaGroupSale]]. Habemos 2 ingenieros informáticos, 2 electrónicos y 1 usuario avanzado, por tanto, creo que formamos un equipito interesante. Iremos apuntando por aquí la actividad que vayamos teniendo.
 
 Pedimos una placa de debug para tenerla por aquí, por si hace falta <strike>destrozar</strike> <strike>arreglar</strike> algo.
 
