--- a/Openmoko_Local_Groups:_Vancouver.mw
+++ b/Openmoko_Local_Groups:_Vancouver.mw
@@ -29,7 +29,7 @@
 |-
 |[[User:alau42|alau42]]
 |user
-|Hope that my Freerunner will actually function as a phone one day...
+|Hope that my FreeRunner will actually function as a phone one day...
 |Vancouver
 |[[Image: Moko.jpg|center]]
 |[[Image: MokoBox.jpg|center]]
