Replacing 'Freerunner' with 'FreeRunner'

--- a/Openmoko_Wiki_Editing_Guidelines.mw
+++ b/Openmoko_Wiki_Editing_Guidelines.mw
@@ -111,7 +111,7 @@ See also: http://en.wikipedia.org/wiki/Wikipedia:Categories,_lists,_and_navigati
 
 *F
 ** FreeRunner 
-***(not freerunner or Freerunner)
+***(not freerunner or FreeRunner)
 ***(the model name of the 2nd Openmoko phone, technically GTA02)
 *G
 
