--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -158,7 +158,7 @@ __NOTOC__
 *[[Development Environment]]
 *[[Latest Images]]
 *[[Repositories]]
-*[[Freerunner Software Status]]
+*[[FreeRunner Software Status]]
 ====Application Guideline====
 <br>
 *[[Minimo|Building Minimo web browser ]]
@@ -476,7 +476,7 @@ __NOTOC__
 *[[Shop:Speedevil]]
 ===Shipment===
 *[[Shipping Notes]]
-*[[Where is my Freerunner?]]
+*[[Where is my FreeRunner?]]
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left| 
 ====GroupSales====
 *[[GroupSales]]
