Replacing 'Freerunner' with 'FreeRunner'

--- a/Backup.mw
+++ b/Backup.mw
@@ -26,7 +26,7 @@ You may either :
 
 You will need the [[Dfu-util]] to make a backup of your existing image.
 
-As when [[Flashing_the_Neo_FreeRunner|flashing]], you will need to be in [[Booting_the_Neo_FreeRunner#Log_into_U-Boot_in_the_NOR_Flash|U-Boot in the NOR Flash]]. Log into the NOR uBoot menu and select ''Set console to USB'' (for NRF just stay in NOR uBoot menu, do not select or enter anything). Now you will be able to flash, make backups of your Freerunner or query the Freerunner with [[Dfu-util|dfu-util]].  Backup is fairly slow; it took over ten minutes to back up a 247 MB rootfs.
+As when [[Flashing_the_Neo_FreeRunner|flashing]], you will need to be in [[Booting_the_Neo_FreeRunner#Log_into_U-Boot_in_the_NOR_Flash|U-Boot in the NOR Flash]]. Log into the NOR uBoot menu and select ''Set console to USB'' (for NRF just stay in NOR uBoot menu, do not select or enter anything). Now you will be able to flash, make backups of your FreeRunner or query the FreeRunner with [[Dfu-util|dfu-util]].  Backup is fairly slow; it took over ten minutes to back up a 247 MB rootfs.
 
 It is important that you connect the USB cable directly from your computer to your phone.  If there is a hub between them, backup (and flashing) will mostly likely fail.
 
@@ -183,7 +183,7 @@ for device in `${DFU} --list | grep 0x | cut -f3 -d' ' | tr -d '[]'` ; do
 	if [ "$device" == '0x1457:0x5119' ] ; then
 		echo 'Neo 1973'
 	elif [ "$device" == '0x1d50:0x5119' ] ;	then
-		echo "Neo Freerunner"
+		echo "Neo FreeRunner"
 	else
 		echo 'other device found, DO NOT use dfu-util on this!!! it might bork it...'
 		exit 1
