Replacing 'Freerunner' with 'FreeRunner'

--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -80,7 +80,7 @@ This site contains the press coverage about Openmoko and the Neo 1973 sorted by 
 
 * LinuxDevices.com: [http://www.linuxdevices.com/news/NS9978560959.html Open source phone goes mass-market]
 
-* BusinessWire: [http://www.businesswire.com/portal/site/google/?ndmViewId=news_view&newsId=20080625005431&newsLang=en Openmoko Signs Five Distributors for Freerunner Open Source Mobile Phone]
+* BusinessWire: [http://www.businesswire.com/portal/site/google/?ndmViewId=news_view&newsId=20080625005431&newsLang=en Openmoko Signs Five Distributors for FreeRunner Open Source Mobile Phone]
 
 * Mobile Gazette: [http://www.mobilegazette.com/openmoko-neo-freerunner-08x06x26.htm Openmoko Neo FreeRunner]
 
