Replacing 'Freerunner' with 'FreeRunner'

--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -1,13 +1,13 @@
 {{Languages|Qtopia_on_FreeRunner}}
 
-Questa pagina fornisce le istruzioni per installare Qtopia (la versione standard, non le varianti della [[ASU]] o della [[QtopiaOnX11]]) sul telefono GTA02 (Freerunner). È simile alla pagina [[Qtopia on Neo1973]].
+Questa pagina fornisce le istruzioni per installare Qtopia (la versione standard, non le varianti della [[ASU]] o della [[QtopiaOnX11]]) sul telefono GTA02 (FreeRunner). È simile alla pagina [[Qtopia on Neo1973]].
 
 {|align=right
 |__TOC__
 |}
 
 == Stato corrente ==
-L'8 Agosto 2008 Qtopia ha rilasciato [http://www.qtopia.net/modules/mydownloads/singlefile.php?lid=77 l'ultima immagine flash per il Neo Freerunner della FIC (gta02)] contentente losnapshot di Qtopia 4.3.2 (Versione: 4.3.2-080808) dell'8 Agosto 2008 (versione GPL). 
+L'8 Agosto 2008 Qtopia ha rilasciato [http://www.qtopia.net/modules/mydownloads/singlefile.php?lid=77 l'ultima immagine flash per il Neo FreeRunner della FIC (gta02)] contentente losnapshot di Qtopia 4.3.2 (Versione: 4.3.2-080808) dell'8 Agosto 2008 (versione GPL). 
 
 Questa immagine può realmente fare e ricevere chiamate e messaggi di testo. Riesce a leggere tutti i contatti dalla scheda SIM (cosa che l'aggiornamento della 2007.2 sembra non sia in grado di fare). Contiene applicazioni che sembrano più stabili di quelle che si trovano sull'immagine della 2007.2. Fornisce diversi metodi per l'inserimento dei caratteri che sembrano più maturi. Non ha, comunque, un browser Web, né alcuna applicazione per il GPS.
 
@@ -19,7 +19,7 @@ Scarica l'immagine sopra indicata e segui queste istruzioni: [[Flashing the Neo 
 == Opzione 2: Dual-Boot tra Qtopia e la 2007.2 (Qtopia caricato dalla scheda MicroSD) ==
 Requisiti d'istallazione: 
 
-# Accesso tramite shell SSH all'immagine 2007.2 del Freerunner tramite interfaccia USB o WLAN.
+# Accesso tramite shell SSH all'immagine 2007.2 del FreeRunner tramite interfaccia USB o WLAN.
 # Una distribuzione anche desktop Linux (per scompattare l'immagine .jffs2, è funzionato anche usando una Ubuntu  virtualizzata con VMWare)
 
 === Preparare la scheda SD ===
