Replacing 'Freerunner' with 'FreeRunner'

--- a/SFBayAreaGetStarted.mw
+++ b/SFBayAreaGetStarted.mw
@@ -17,7 +17,7 @@ If you are interested in attending a meeting to talk about Getting started with 
 |-
 |[[User:Elektrolott|Lothar]]
 |Programming
-|I don't have a Freerunner yet (waiting for the 900MHz model)
+|I don't have a FreeRunner yet (waiting for the 900MHz model)
 |I'll join if I can make it
 |San Jose
 |-
