--- a/Server:WebProxy.mw
+++ b/Server:WebProxy.mw
@@ -38,7 +38,7 @@ Other optimisations:
 * Probably 'Ziproxy' (http://ziproxy.sourceforge.net/) could be extended to provide this functionality.
 
 Extended usage scenarios:
-* Different profiles, depending on how the Freerunner is connected (Wifi vs. USB vs. GPRS).
+* Different profiles, depending on how the FreeRunner is connected (Wifi vs. USB vs. GPRS).
 * Traffic-measurement especially for GPRS-connection for users with limited data-amounts (for example 200MB/month) or in areas with limited data-consumption, like on commercial wifi-aps on airports and such.
 
 [[Category:Server]]
