Replacing 'Freerunner' with 'FreeRunner'

--- a/Setting_Date_and_Time.mw
+++ b/Setting_Date_and_Time.mw
@@ -1,4 +1,4 @@
-Linux systems (such as the Freerunner) prefer that the system clock be set to universal time (UTC). Then, you will need to configure the timezone to display the time adjusted to local time.
+Linux systems (such as the FreeRunner) prefer that the system clock be set to universal time (UTC). Then, you will need to configure the timezone to display the time adjusted to local time.
 
 See [[Timezone]] for instructions on changing the time zone.
 
@@ -6,7 +6,7 @@ For more information on Linux timekeeping, see [http://www.linuxsa.org.au/tips/t
 
 == Setting the date/time using "date" ==
 
-To change the date on your Freerunner, issue one of the following commands:
+To change the date on your FreeRunner, issue one of the following commands:
 
  date -s ''MMDDhhmm''
  date -s ''MMDDhhmmYYYY''
@@ -20,12 +20,12 @@ where ''MM'' is the month, 01-12; ''DD'' is the day, 01-31; ''hhmm'' is the time
 
 == Setting the date/time automatically with NTP ==
 
-If your Freerunner is connected to the internet, you can instead set the time automatically:
+If your FreeRunner is connected to the internet, you can instead set the time automatically:
 
   opkg install ntpclient
   ntpclient -s -h pool.ntp.org
 
-If your Freerunner is connecting to the internet through a USB host, make sure you allow UDP traffic to pass through on port 123 (NTP) on your host machine or you may get a "no route to host" error from ntpclient.
+If your FreeRunner is connecting to the internet through a USB host, make sure you allow UDP traffic to pass through on port 123 (NTP) on your host machine or you may get a "no route to host" error from ntpclient.
 
 == Syncing the hardware clock ==
 
