--- a/Snapshot_review%2F2008-07-12.mw
+++ b/Snapshot_review%2F2008-07-12.mw
@@ -21,7 +21,7 @@ uBoot Snapshot name:
 u-boot-gta02v5-1.3.1+svnr4297+gitb29661fc1151077776454288051bc9a488351ce8-r3.bin
 
 Device type:
-Freerunner (GTA02v5)
+FreeRunner (GTA02v5)
 
 ==Boot==
 *Speed - (No measured test.)
