Replacing 'Freerunner' with 'FreeRunner'

--- a/Specialized_USB_cables.mw
+++ b/Specialized_USB_cables.mw
@@ -53,7 +53,7 @@ Note that these instructions are provided in the hope that they are useful but w
  green 0V
  white 0V
  red +5V
-:#Freerunner is shipped with a mini-B-to-A-plug cable. Connect this to a receptacle.
+:#FreeRunner is shipped with a mini-B-to-A-plug cable. Connect this to a receptacle.
 :#(Optional)Connect test cable to the other receptacle and verify that you see
  black GND
  green 0V
@@ -130,7 +130,7 @@ Just for reference, the USB wires from left to right are:
 *Red: Power +
 
 The Mini_USB-B connector has a fifth pin, the ID-pin.
-This pin is supposed to be short to ground to signal Freerunner to enter hostmode. For the Y-cable and enabling external power while in hostmode, you may connect a 47kOhm resistor from ID-pin to ground. This is the same trick the OM-wallcharger uses to signal to Freerunner it can charge with 1A. Future kernels should switch to hostmode + external power when seeing this 47k resistor.
+This pin is supposed to be short to ground to signal FreeRunner to enter hostmode. For the Y-cable and enabling external power while in hostmode, you may connect a 47kOhm resistor from ID-pin to ground. This is the same trick the OM-wallcharger uses to signal to FreeRunner it can charge with 1A. Future kernels should switch to hostmode + external power when seeing this 47k resistor.
 
 
 
