Replacing 'Freerunner' with 'FreeRunner'

--- a/Support.mw
+++ b/Support.mw
@@ -34,9 +34,9 @@ Please subscribe support for Openmoko device owners list <support@lists.openmoko
 
 == Downloads ==
 
-=== Freerunner (GTA02) ===
+=== FreeRunner (GTA02) ===
 
-* Freerunner release images [http://buildhost.openmoko.org/releases/Freerunner/ Freerunner]
+* FreeRunner release images [http://buildhost.openmoko.org/releases/FreeRunner/ FreeRunner]
 
 === ASU (August Software Update) (GTA02) ===
 
