Replacing 'Freerunner' with 'FreeRunner'

--- a/Switching_Keyboards_on_Om_2007.2.mw
+++ b/Switching_Keyboards_on_Om_2007.2.mw
@@ -36,7 +36,7 @@ Another keyboard is available: matchbox-keyboard. It is a full QWERTY keyboard. 
 
 ===What does the keyboard look like?===
 
-[[Image:Complete_QWERTY_Keyboard_On_The_Freerunner_screenshot.png|none|thumb|260px|Screenshot of the keyboard applet]]
+[[Image:Complete_QWERTY_Keyboard_On_The_FreeRunner_screenshot.png|none|thumb|260px|Screenshot of the keyboard applet]]
 
 ===Considerations===
 
@@ -57,7 +57,7 @@ If you use a ScaredyCat release (http://buildhost.automated.it/OM2007.2/) or [ht
  opkg install matchbox-keyboard-im
  opkg install matchbox-keyboard-applet
 
-Otherwise, you'll have to download the ipk files from [http://www.ginguppin.de/files/keyboard-ipk.tar.bz2 here]. Assuming you have a working internet connection on your Freerunner, you can do the following:
+Otherwise, you'll have to download the ipk files from [http://www.ginguppin.de/files/keyboard-ipk.tar.bz2 here]. Assuming you have a working internet connection on your FreeRunner, you can do the following:
 
  cd /tmp
  mkdir matchbox-keyboard
