Replacing 'Freerunner' with 'FreeRunner'

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -22,7 +22,7 @@ If opkg complains about not being able to acquire a lock, try:
 
   pkill packagekit
 
-To get gpsd working on the Freerunner you have to change the configuration according to [[Gpsd#GPS_on_GTA02]].
+To get gpsd working on the FreeRunner you have to change the configuration according to [[Gpsd#GPS_on_GTA02]].
 Then start gpsd by:
 
   /etc/init.d/gpsd start
