--- a/Timezone.mw
+++ b/Timezone.mw
@@ -5,7 +5,7 @@ At this time, there is no preferences application to set the timezone of your Op
 For now, either open the terminal application or log in to your Openmoko over the USB networking
 connection and change the timezone via commandline commands.
 
-To change the timezone on your Freerunner you have to 
+To change the timezone on your FreeRunner you have to 
 
  opkg install tzdata
 
