Replacing 'Freerunner' with 'FreeRunner'

--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -535,9 +535,9 @@ Using this, run openmoko-finger-demo for example, and it will open up on the des
 If you get an error like this:
  dbus.exceptions.DBusException: org.freedesktop.DBus.Error.Spawn.ExecFailed: dbus-launch failed to     
  autolaunch D-Bus session: Autolaunch requested, but X11 support not compiled in.
-you need to set the DBUS_SESSION_BUS_ADDRESS environment variable to the value on the Freerunner before launching the process from your desktop.  You can find the value of this variable by using a command such as
+you need to set the DBUS_SESSION_BUS_ADDRESS environment variable to the value on the FreeRunner before launching the process from your desktop.  You can find the value of this variable by using a command such as
  ps auxwwwwe | grep -m 1 DBUS_SESSION_BUS_ADDRESS
-Note that you must run that command on the Freerunner.  Back on your desktop, run the process you want with the ''env'' command like this:
+Note that you must run that command on the FreeRunner.  Back on your desktop, run the process you want with the ''env'' command like this:
  env DBUS_SESSION_BUS_ADDRESS=''dbus_address'' ''process''
 
 ==Display Remote Applications on FreeRunner==
