Replacing 'Freerunner' with 'FreeRunner'

--- a/Neo_USB_charger_specifications_and_compatibility_list.mw
+++ b/Neo_USB_charger_specifications_and_compatibility_list.mw
@@ -1,6 +1,6 @@
 {{Languages|USB charger}}
 
-The [[Neo Freerunner]] and the [[Neo 1973]] can be charged with the supplied USB charger, which is a device that does not comply with the recent  [http://www.usb.org/developers/devclass_docs/batt_charging_1_0.zip USB Battery Charging Specification]. This specification demands for an open circuit on the ID pin and a short circuit between the D+ and D- pins.
+The [[Neo FreeRunner]] and the [[Neo 1973]] can be charged with the supplied USB charger, which is a device that does not comply with the recent  [http://www.usb.org/developers/devclass_docs/batt_charging_1_0.zip USB Battery Charging Specification]. This specification demands for an open circuit on the ID pin and a short circuit between the D+ and D- pins.
 
 Most of the USB chargers around behave the same way as the one supplied with the Openmoko Neo. In fact, up to now no charger has been identified to comply to the specification mentioned above. The differences (incompatibilities) result from the way the USB charger signals the mobile phone that it is present: most of the manufacturers chose to connect a resistor between the "ID" pin and the "GND" pin in the USB connector.
 
@@ -10,9 +10,9 @@ Additional details can be found at : http://quickstart.openmoko.org/#chargerdete
 
 Following USB chargers have been identified and measured:
 
-== AKII Technology Charger (supplied with Neo Freerunner) ==
+== AKII Technology Charger (supplied with Neo FreeRunner) ==
 
-This charger comes with the Neo Freerunner package.
+This charger comes with the Neo FreeRunner package.
 
 === Specifications ===
 
@@ -25,7 +25,7 @@ This charger comes with the Neo Freerunner package.
 
 *HTC Polaris (tested on O2 Xda Orbit 2)
 *Openmoko Neo1973
-*Openmoko Neo Freerunner
+*Openmoko Neo FreeRunner
 
 == Blackberry PSM05R-050CHW ==
 [[Image:P1040112.jpg|thumb|300px]]
@@ -37,7 +37,7 @@ This charger comes with the Neo Freerunner package.
 
 === Compatibility ===
 
-*Openmoko Neo Freerunner, provided the 500 mA charging mode is enabled on the FR (see [[Forcing_fast_charge_mode]]), as otherwise it would only (dis)charge, as the FR would only draw 100 mA out of it.
+*Openmoko Neo FreeRunner, provided the 500 mA charging mode is enabled on the FR (see [[Forcing_fast_charge_mode]]), as otherwise it would only (dis)charge, as the FR would only draw 100 mA out of it.
 
 == ''sold as'' "Essentiel b (Boulanger)" ''Chargeur allume-cigares/USB'' ==
 [[Image:P1040105.jpg|thumb|300px]]
@@ -51,7 +51,7 @@ This car charger is sold at the French appliances superstore ''Boulanger'' but s
 
 === Compatibility ===
 
-*Openmoko Neo Freerunner, provided the 500 mA charging mode is enabled on the FR (see [[Forcing_fast_charge_mode]]), as otherwise it would only (dis)charge, as the FR would only draw 100 mA out of it.
+*Openmoko Neo FreeRunner, provided the 500 mA charging mode is enabled on the FR (see [[Forcing_fast_charge_mode]]), as otherwise it would only (dis)charge, as the FR would only draw 100 mA out of it.
 
 == Garmin 362-00043-04 ==
 [[Image:Charger_garmin.jpg|thumb|300px|Garmin 362-00043-04]]
@@ -80,7 +80,7 @@ This charger comes with the tmobile MDA Compact 2 (HTC Charmer).
 
 === Compatibility ===
 *HTC Charmer (tested on MDA Compact 2)
-*Openmoko Neo Freerunner
+*Openmoko Neo FreeRunner
 
 
 == HTC 79H00055-02M ==
