--- a/Userspace_root_image.mw
+++ b/Userspace_root_image.mw
@@ -116,7 +116,7 @@ See [[U-boot#Writing_rootfs_to_NAND]]
 
 == Converting a GTA02 image for GTA01 ==
 
-The techniques on this page may be used to convert a GTA02 (Freerunner) image for use on a GTA01, provided that it is small enough to fit into the GTA01's flash. 
+The techniques on this page may be used to convert a GTA02 (FreeRunner) image for use on a GTA01, provided that it is small enough to fit into the GTA01's flash. 
 
 The steps I used are shown below (corrections welcome). Please read all of this page before executing these commands, in particular the warning to make sure that /dev/mtd0 does not map to a real flash device on your system.
 
