Replacing 'Freerunner' with 'FreeRunner'

--- a/Vibrator.mw
+++ b/Vibrator.mw
@@ -1,6 +1,6 @@
 == Vibrator ==
 
-This is in reference to the vibrator in the Neo Freerunner, however it is likely identical to the Neo 1973, as best I can tell.
+This is in reference to the vibrator in the Neo FreeRunner, however it is likely identical to the Neo 1973, as best I can tell.
 
 === Controlling ===
 The vibrator is controlled through:
