Replacing 'Freerunner' with 'FreeRunner'

--- a/Desktop_wallpaper_gallery.mw
+++ b/Desktop_wallpaper_gallery.mw
@@ -1,8 +1,8 @@
 == Openmoko-inspired wallpaper designs for your desktop systems. ==
 
-This image helps me design graphics to fit the Freerunner display, both portrait and landscape, as well as other common display resolutions.
+This image helps me design graphics to fit the FreeRunner display, both portrait and landscape, as well as other common display resolutions.
 
-[[Image:FreerunnerBlueprint1280x1024.png|640px]]
+[[Image:FreeRunnerBlueprint1280x1024.png|640px]]
 
 ----
 
